PAY-220: Initial commit, added validation to processPayment use case and updated API docs
